# SAPPHYRE

./: .editorconfig  .gitignore  BlastPal.py  BlastPalDB.py  CleanTaxa.py  FlexCull.py  FlexCullNew.py  FlexCullOrig.py  HmmsearchDB.py  Merge.py  MergeAll_fix.py  MergeGenes.py  MergeOverlap.py  OutlierCheck.py  OutlierCheck_refactor.py  PrepareDB.py  README.md  Reporter.py  ReporterDB.py  TODO  ccc_super.py  ccc_super_NoAA.py  ccc_super_regex.py  copy_super.py  flex_cull.py  hmmsearch.py  mafft.py  mafft_new.py  merge_dir.py  merge_overlap.py  nt_batch.py  nt_batch_new.py  outlier_check.py  pal2nal.mod.pl  pyproject.toml  requirements.txt  setup.cfg  setup.py
identity/src/: main.rs
minirmd/: minirmd
phymmr/: BlastPalDB.py  FlexCull.py  HmmsearchDB.py  MergeGenes.py  MergeOverlap.py  OutlierCheck.py  PrepareDB.py  ReporterDB.py  __main__.py  archiver.py  blastpal.py  blastpaldb.py  diamond.py  finalize.py  flexcull.py  hmmseachdb.py  hmmsearch.py  hmmsearchdb.py  mafft.py  makeref.py  merge_genes.py  merge_overlap.py  nt_batch.py  outliercheck.py  pal2nal.py  prepare.py  prepare.py.bak  preparedb.py  reporter.py  reporter_old.py  reporterdb.py  sradownload.py  timekeeper.py  utils.py
phymmr/rocky/: __init__.py
sapphyre/: __main__.py  align.py  archive.py  archiver.py  auto.py  blosum.py  cluster_consensus.py  collapser.py  combine.py  consensus_merge.py  correct_errors.py  diamond.py  directional_cluster.py  download.py  excise.py  exonerate.py  exonerate_module.py  extend.py  finalize.py  flexcull.py  genome_splice.py  hmmfilter.py  hmmsearch.py  internal.py  mafft.py  makeref.py  merge.py  merge_genes.py  merge_overlap.py  miniprot.py  miniprot_module.py  motif.py  outlier.py  outliercheck.py  pal2nal.py  prepare.py  read_assembly.py  recover.py  reporter.py  reporter.pyZone.Identifier  (+5 more)
sapphyre/tools/: archive.py  download.py  isoform.py  taxonomy_filler.py
sigclust/: Makefile  SigClust
