[project]
name = "SAPPHYRE"
version = "0.0.1"
authors = [
  { name="Kevin Moran", email="thernn8891@gmail.com" },
  { name="Ashton Pooley", email="admin@ashi.digital" },
  { name="Michael Valentine", email="mvalentine65@gmail.com" },
]
description = "An assembly-less solution for processing high-throughput sequencing reads for phylogenetics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Thernn88/SAPPHYRE"
Issues = "https://github.com/Thernn88/SAPPHYRE/issues"

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'