[metadata]
name = SAPPHYRE
version = 0.0.1
author = Kevin Moran
author_email = thernn8891@gmail.com
description = An assembly-less solution for processing high-throughput sequencing reads for phylogenetics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thernn88/SAPPHYRE
project_urls =
    Bug Tracker = https://github.com/Thernn88/SAPPHYRE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    sapphyre
python_requires = >=3.10
install_requires=
    beautifulsoup4 >= 4.12.2
    Bio >= 1.6.0
    biopython >= 1.81
    msgspec >= 0.18.4
    needletail >= 0.5.0
    numpy >= 1.24.2
    openpyxl >= 3.1.2
    pandas >= 2.1.3
    parasail >= 1.3.4
    phymmr_tools >= 0.6.4
    pro2codon >= 1.2.4
    pyfastx >= 2.0.1
    Requests >= 2.31.0
    scipy >= 1.11.4
    setuptools >= 67.6.1
    tqdm >= 4.66.1
    wrap_rocks >= 0.3.7
    xxhash >= 3.4.1

[options.entry_points]
console_scripts =
    sapphyre = sapphyre.__main__:main